--- a/ipython_notebooks/airbnb_price_trends.ipynb
+++ b/ipython_notebooks/airbnb_price_trends.ipynb
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/erikyang/anaconda/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Python packages\n",
     "import os\n",
@@ -49,6 +40,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from sklearn.externals import joblib\n",
     "import sklearn.linear_model as linear_model\n",
     "from sklearn import ensemble\n",
     "import sklearn.metrics as metrics\n",
@@ -683,6 +675,18 @@
     "export_path = \"../exported_models/airbnb_price_trends.hdf\"\n",
     "X_df.to_hdf(export_path, \"X_df\")\n",
     "Y.to_hdf(export_path, \"Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "export_path = \"../exported_models/airbnb_price_trends.pkl\"\n",
+    "joblib.dump(best_model, export_path);"
    ]
   },
   {
